--- a/careers.html
+++ b/careers.html
@@ -98,6 +98,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <a href="technology.html">Technology</a>
 <a href="solutions.html">Solutions</a>
 <a href="careers.html" class="active">Careers</a>
+<a href="demo.html">Demo</a>
 </div>
 <button class="btn btn-p">Get Started</button>
 </div>
