--- a/solutions.html
+++ b/solutions.html
@@ -91,6 +91,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <a href="technology.html">Technology</a>
 <a href="solutions.html" class="active">Solutions</a>
 <a href="careers.html">Careers</a>
+<a href="demo.html">Demo</a>
 </div>
 <button class="btn btn-p">Get Started</button>
 </div>
@@ -200,12 +201,25 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </div>
 <div class="sol-visual orange">
 <h4>Campaign Performance</h4>
-<div class="sol-visual-list">
-<div class="sol-visual-item">📈 +14% brand favorability lift</div>
-<div class="sol-visual-item">🎯 +5% purchase intent increase</div>
-<div class="sol-visual-item">👁️ +3% time-in-view improvement</div>
-<div class="sol-visual-item">🏆 2.3x industry average CTR</div>
+<div style="display:grid;grid-template-columns:1fr 1fr;gap:16px;margin-bottom:20px">
+<div style="background:rgba(255,255,255,.15);border-radius:12px;padding:20px;text-align:center">
+<div style="font-size:36px;font-weight:800">+14%</div>
+<div style="font-size:12px;opacity:.8">Brand favorability</div>
 </div>
+<div style="background:rgba(255,255,255,.15);border-radius:12px;padding:20px;text-align:center">
+<div style="font-size:36px;font-weight:800">+5%</div>
+<div style="font-size:12px;opacity:.8">Purchase intent</div>
+</div>
+<div style="background:rgba(255,255,255,.15);border-radius:12px;padding:20px;text-align:center">
+<div style="font-size:36px;font-weight:800">+3%</div>
+<div style="font-size:12px;opacity:.8">Time-in-view</div>
+</div>
+<div style="background:rgba(255,255,255,.15);border-radius:12px;padding:20px;text-align:center">
+<div style="font-size:36px;font-weight:800">2.3x</div>
+<div style="font-size:12px;opacity:.8">Industry avg CTR</div>
+</div>
+</div>
+<div style="text-align:center;padding:16px;background:rgba(255,255,255,.1);border-radius:10px;font-size:13px">🏆 Outperforming industry benchmarks across all metrics</div>
 </div>
 </div>
 </div>
