--- a/technology.html
+++ b/technology.html
@@ -46,7 +46,7 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .engine-card p{font-size:15px;color:var(--txtl);line-height:1.7}
 
 .how{background:#fff}
-.how-grid{display:grid;grid-template-columns:1fr 1fr;gap:80px;align-items:center}
+.how-grid{display:grid;grid-template-columns:1fr 1fr;gap:60px;align-items:stretch}
 .how-content h2{font-size:36px;font-weight:800;color:var(--pri);margin-bottom:20px}
 .how-content>p{font-size:18px;color:var(--txtl);margin-bottom:32px}
 .how-steps{display:flex;flex-direction:column;gap:20px}
@@ -55,7 +55,7 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .how-num{width:40px;height:40px;background:var(--acc);color:#fff;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:700;flex-shrink:0}
 .how-step h4{font-size:16px;font-weight:600;color:var(--pri);margin-bottom:4px}
 .how-step p{font-size:14px;color:var(--txtl)}
-.how-visual{background:linear-gradient(135deg,var(--pri),#1e3a5f);border-radius:24px;padding:48px;color:#fff}
+.how-visual{background:linear-gradient(135deg,var(--pri),#1e3a5f);border-radius:24px;padding:48px;color:#fff;display:flex;flex-direction:column;justify-content:center}
 .how-visual h3{font-size:18px;font-weight:600;margin-bottom:32px;opacity:.8}
 .flow-item{display:flex;align-items:center;gap:16px;padding:16px;background:rgba(255,255,255,.1);border-radius:12px;margin-bottom:12px}
 .flow-icon{width:44px;height:44px;background:var(--acc);border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:20px}
@@ -92,6 +92,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <a href="technology.html" class="active">Technology</a>
 <a href="solutions.html">Solutions</a>
 <a href="careers.html">Careers</a>
+<a href="demo.html">Demo</a>
 </div>
 <button class="btn btn-p">Get Started</button>
 </div>
