--- a/solutions.html
+++ b/solutions.html
@@ -7,24 +7,38 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-:root{--pri:#0f172a;--acc:#0ea5e9;--teal:#14b8a6;--ora:#f97316;--pur:#8b5cf6;--txt:#334155;--txtl:#64748b;--bg:#fff;--bgs:#f8fafc;--bor:#e2e8f0}
+:root{
+  --teal:#0097a7;
+  --magenta:#d81b60;
+  --purple:#8e24aa;
+  --orange:#f57c00;
+  --yellow:#ffc107;
+  --pri:#1a1a2e;
+  --txt:#334155;
+  --txtl:#64748b;
+  --bg:#fff;
+  --bgs:#f8fafc;
+  --bor:#e2e8f0
+}
 body{font-family:'Inter',sans-serif;color:var(--txt);line-height:1.6}
 a{text-decoration:none;color:inherit}
-nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-filter:blur(10px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
+nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.97);backdrop-filter:blur(12px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
 .nav-c{max-width:1200px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;height:72px}
 .logo{display:flex;align-items:center;gap:12px;font-weight:700;font-size:20px;color:var(--pri)}
-.logo-i{width:36px;height:36px;background:linear-gradient(135deg,var(--ora),var(--acc),var(--teal));border-radius:8px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800}
+.logo-icon{width:40px;height:40px;border-radius:10px;position:relative;overflow:hidden;display:flex;align-items:center;justify-content:center}
+.logo-icon::before{content:'';position:absolute;inset:0;background:conic-gradient(from 180deg,var(--teal) 0deg,var(--magenta) 90deg,var(--purple) 180deg,var(--orange) 270deg,var(--yellow) 360deg)}
+.logo-icon span{position:relative;z-index:1;color:#fff;font-weight:800;font-size:22px}
 .nav-links{display:flex;gap:32px}
 .nav-links a{font-size:14px;font-weight:500;color:var(--txt);transition:color .2s}
-.nav-links a:hover,.nav-links a.active{color:var(--acc)}
+.nav-links a:hover,.nav-links a.active{color:var(--magenta)}
 .btn{padding:10px 20px;border-radius:8px;font-size:14px;font-weight:600;border:none;cursor:pointer;transition:all .2s}
-.btn-p{background:var(--pri);color:#fff}
-.btn-p:hover{background:#1e293b}
+.btn-p{background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff}
+.btn-p:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(216,27,96,.3)}
 
-.hero{padding:140px 24px 80px;background:linear-gradient(180deg,var(--bgs),var(--bg))}
+.hero{padding:140px 24px 80px;background:linear-gradient(180deg,#fafbfc,var(--bg))}
 .hero-c{max-width:1200px;margin:0 auto;text-align:center}
 .hero h1{font-size:52px;font-weight:800;color:var(--pri);margin-bottom:20px}
-.hero h1 span{background:linear-gradient(135deg,var(--acc),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.hero h1 span{background:linear-gradient(135deg,var(--magenta),var(--purple),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
 .hero p{font-size:20px;color:var(--txtl);max-width:700px;margin:0 auto}
 
 .section{padding:80px 24px}
@@ -34,23 +48,20 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .sol-grid{display:grid;grid-template-columns:1fr 1fr;gap:80px;align-items:center}
 .sol-grid.reverse{direction:rtl}
 .sol-grid.reverse>*{direction:ltr}
-.sol-content h2{font-size:14px;font-weight:600;color:var(--teal);text-transform:uppercase;letter-spacing:.05em;margin-bottom:12px}
+.sol-content h2{font-size:14px;font-weight:600;color:var(--teal);text-transform:uppercase;letter-spacing:.1em;margin-bottom:12px}
 .sol-content h3{font-size:36px;font-weight:800;color:var(--pri);margin-bottom:16px}
 .sol-content>p{font-size:18px;color:var(--txtl);margin-bottom:32px}
 .sol-features{display:grid;grid-template-columns:1fr 1fr;gap:16px}
 .sol-feat{display:flex;align-items:flex-start;gap:12px;padding:16px;background:var(--bgs);border-radius:12px;border:1px solid var(--bor)}
-.sol-feat-icon{width:32px;height:32px;background:rgba(14,165,233,.1);border-radius:8px;display:flex;align-items:center;justify-content:center;color:var(--acc);flex-shrink:0}
+.sol-feat-icon{width:32px;height:32px;background:linear-gradient(135deg,rgba(0,151,167,.1),rgba(0,151,167,.2));border-radius:8px;display:flex;align-items:center;justify-content:center;color:var(--teal);flex-shrink:0}
 .sol-feat h4{font-size:14px;font-weight:600;color:var(--pri);margin-bottom:2px}
 .sol-feat p{font-size:13px;color:var(--txtl)}
-.sol-visual{background:linear-gradient(135deg,var(--pri),#1e3a5f);border-radius:24px;padding:40px;color:#fff;min-height:400px;display:flex;flex-direction:column;justify-content:center}
-.sol-visual.teal{background:linear-gradient(135deg,#0f766e,var(--teal))}
-.sol-visual.orange{background:linear-gradient(135deg,#c2410c,var(--ora))}
+.sol-visual{background:linear-gradient(135deg,var(--teal),#00838f);border-radius:24px;padding:40px;color:#fff;min-height:400px;display:flex;flex-direction:column;justify-content:center}
+.sol-visual.orange{background:linear-gradient(135deg,var(--orange),#ef6c00)}
 .sol-visual h4{font-size:16px;font-weight:600;margin-bottom:24px;opacity:.8}
 .sol-stat{margin-bottom:20px}
 .sol-stat-val{font-size:48px;font-weight:800}
 .sol-stat-lbl{font-size:14px;opacity:.8}
-.sol-visual-list{display:flex;flex-direction:column;gap:12px}
-.sol-visual-item{display:flex;align-items:center;gap:12px;padding:14px;background:rgba(255,255,255,.1);border-radius:10px;font-size:14px;font-weight:500}
 
 .audiences{background:var(--bgs);padding:100px 24px}
 .aud-header{text-align:center;margin-bottom:60px}
@@ -58,21 +69,22 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .aud-header p{font-size:18px;color:var(--txtl)}
 .aud-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:24px;max-width:1200px;margin:0 auto}
 .aud-card{background:#fff;padding:32px;border-radius:16px;border:1px solid var(--bor);text-align:center;transition:all .3s}
-.aud-card:hover{transform:translateY(-4px);box-shadow:0 15px 30px rgba(0,0,0,.08)}
+.aud-card:hover{transform:translateY(-4px);box-shadow:0 15px 30px rgba(0,0,0,.08);border-color:var(--magenta)}
 .aud-icon{font-size:40px;margin-bottom:16px}
 .aud-card h4{font-size:18px;font-weight:700;color:var(--pri);margin-bottom:8px}
 .aud-card p{font-size:14px;color:var(--txtl)}
 
-.cta{padding:100px 24px;background:linear-gradient(135deg,var(--pri),#1e3a5f);text-align:center;color:#fff}
+.cta{padding:100px 24px;background:linear-gradient(135deg,var(--magenta),var(--purple));text-align:center;color:#fff}
 .cta h2{font-size:40px;font-weight:800;margin-bottom:16px}
-.cta p{font-size:18px;opacity:.8;margin-bottom:32px}
+.cta p{font-size:18px;opacity:.9;margin-bottom:32px}
 .cta-btns{display:flex;gap:16px;justify-content:center}
-.btn-w{background:#fff;color:var(--pri);padding:14px 28px}
+.btn-w{background:#fff;color:var(--pri);padding:14px 28px;font-weight:700}
 .btn-w:hover{background:var(--bgs)}
 .btn-o{background:rgba(255,255,255,.15);border:2px solid #fff;color:#fff;padding:14px 28px;font-weight:700}
 .btn-o:hover{background:rgba(255,255,255,.25)}
 
-footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;color:var(--txtl);border-top:1px solid var(--bor)}
+footer{padding:60px 24px;background:var(--pri);text-align:center}
+.foot-c{font-size:13px;color:rgba(255,255,255,.5)}
 
 @media(max-width:900px){
 .nav-links{display:none}
@@ -86,7 +98,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <body>
 <nav>
 <div class="nav-c">
-<a href="index.html" class="logo"><div class="logo-i">M</div>Mundial Media</a>
+<a href="index.html" class="logo"><div class="logo-icon"><span>m</span></div>Mundial Media</a>
 <div class="nav-links">
 <a href="technology.html">Technology</a>
 <a href="solutions.html" class="active">Solutions</a>
@@ -142,7 +154,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </div>
 </div>
 </div>
-<div class="sol-visual teal">
+<div class="sol-visual">
 <h4>Publisher Network</h4>
 <div class="sol-stat">
 <div class="sol-stat-val">400+</div>
@@ -264,7 +276,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </section>
 
 <footer>
-<p>© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p>
+<p class="foot-c">© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p>
 </footer>
 </body>
 </html>
