--- a/careers.html
+++ b/careers.html
@@ -7,39 +7,53 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-:root{--pri:#0f172a;--acc:#0ea5e9;--teal:#14b8a6;--ora:#f97316;--pur:#8b5cf6;--txt:#334155;--txtl:#64748b;--bg:#fff;--bgs:#f8fafc;--bor:#e2e8f0}
+:root{
+  --teal:#0097a7;
+  --magenta:#d81b60;
+  --purple:#8e24aa;
+  --orange:#f57c00;
+  --yellow:#ffc107;
+  --pri:#1a1a2e;
+  --txt:#334155;
+  --txtl:#64748b;
+  --bg:#fff;
+  --bgs:#f8fafc;
+  --bor:#e2e8f0
+}
 body{font-family:'Inter',sans-serif;color:var(--txt);line-height:1.6}
 a{text-decoration:none;color:inherit}
-nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-filter:blur(10px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
+nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.97);backdrop-filter:blur(12px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
 .nav-c{max-width:1200px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;height:72px}
 .logo{display:flex;align-items:center;gap:12px;font-weight:700;font-size:20px;color:var(--pri)}
-.logo-i{width:36px;height:36px;background:linear-gradient(135deg,var(--ora),var(--acc),var(--teal));border-radius:8px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800}
+.logo-icon{width:40px;height:40px;border-radius:10px;position:relative;overflow:hidden;display:flex;align-items:center;justify-content:center}
+.logo-icon::before{content:'';position:absolute;inset:0;background:conic-gradient(from 180deg,var(--teal) 0deg,var(--magenta) 90deg,var(--purple) 180deg,var(--orange) 270deg,var(--yellow) 360deg)}
+.logo-icon span{position:relative;z-index:1;color:#fff;font-weight:800;font-size:22px}
 .nav-links{display:flex;gap:32px}
 .nav-links a{font-size:14px;font-weight:500;color:var(--txt);transition:color .2s}
-.nav-links a:hover,.nav-links a.active{color:var(--acc)}
+.nav-links a:hover,.nav-links a.active{color:var(--magenta)}
 .btn{padding:10px 20px;border-radius:8px;font-size:14px;font-weight:600;border:none;cursor:pointer;transition:all .2s}
-.btn-p{background:var(--pri);color:#fff}
-.btn-p:hover{background:#1e293b}
-.btn-acc{background:var(--acc);color:#fff}
-.btn-acc:hover{background:#0284c7}
+.btn-p{background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff}
+.btn-p:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(216,27,96,.3)}
+.btn-acc{background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff}
+.btn-acc:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(216,27,96,.3)}
 
-.hero{padding:140px 24px 80px;background:linear-gradient(180deg,var(--bgs),var(--bg))}
+.hero{padding:140px 24px 80px;background:linear-gradient(180deg,#fafbfc,var(--bg))}
 .hero-c{max-width:1200px;margin:0 auto;text-align:center}
 .hero h1{font-size:52px;font-weight:800;color:var(--pri);margin-bottom:20px}
-.hero h1 span{background:linear-gradient(135deg,var(--acc),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.hero h1 span{background:linear-gradient(135deg,var(--magenta),var(--purple),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
 .hero p{font-size:20px;color:var(--txtl);max-width:700px;margin:0 auto}
 
 .section{padding:80px 24px}
 .section-c{max-width:1200px;margin:0 auto}
 .section-h{text-align:center;margin-bottom:60px}
-.section-t{font-size:13px;font-weight:600;color:var(--acc);text-transform:uppercase;letter-spacing:.05em;margin-bottom:12px}
+.section-t{font-size:13px;font-weight:600;color:var(--magenta);text-transform:uppercase;letter-spacing:.1em;margin-bottom:12px}
 .section-ti{font-size:36px;font-weight:800;color:var(--pri);margin-bottom:16px}
 .section-d{font-size:18px;color:var(--txtl);max-width:600px;margin:0 auto}
 
 .culture{background:var(--bgs)}
 .culture-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:32px}
 .culture-card{background:#fff;padding:36px;border-radius:20px;border:1px solid var(--bor);text-align:center;transition:all .3s}
-.culture-card:hover{transform:translateY(-4px);box-shadow:0 15px 30px rgba(0,0,0,.08)}
+.culture-card:hover{transform:translateY(-4px);box-shadow:0 15px 30px rgba(0,0,0,.08);border-color:var(--magenta)}
 .culture-icon{font-size:48px;margin-bottom:20px}
 .culture-card h3{font-size:20px;font-weight:700;color:var(--pri);margin-bottom:12px}
 .culture-card p{font-size:15px;color:var(--txtl);line-height:1.7}
@@ -47,18 +61,17 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .benefits{background:#fff}
 .benefits-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:24px}
 .benefit{text-align:center;padding:24px}
-.benefit-icon{width:56px;height:56px;margin:0 auto 16px;background:linear-gradient(135deg,rgba(14,165,233,.1),rgba(20,184,166,.1));border-radius:14px;display:flex;align-items:center;justify-content:center;font-size:24px}
+.benefit-icon{width:56px;height:56px;margin:0 auto 16px;background:linear-gradient(135deg,rgba(216,27,96,.1),rgba(142,36,170,.1));border-radius:14px;display:flex;align-items:center;justify-content:center;font-size:24px}
 .benefit h4{font-size:16px;font-weight:600;color:var(--pri);margin-bottom:6px}
 .benefit p{font-size:14px;color:var(--txtl)}
 
 .jobs{background:var(--bgs)}
 .jobs-list{display:flex;flex-direction:column;gap:16px}
 .job{background:#fff;padding:28px 32px;border-radius:16px;border:1px solid var(--bor);display:flex;align-items:center;justify-content:space-between;transition:all .3s}
-.job:hover{border-color:var(--acc);box-shadow:0 8px 24px rgba(0,0,0,.06)}
+.job:hover{border-color:var(--magenta);box-shadow:0 8px 24px rgba(0,0,0,.06)}
 .job-info h3{font-size:18px;font-weight:700;color:var(--pri);margin-bottom:6px}
 .job-meta{display:flex;gap:16px}
 .job-tag{font-size:13px;color:var(--txtl);display:flex;align-items:center;gap:6px}
-.job-tag svg{width:16px;height:16px;stroke:var(--txtl)}
 
 .values{background:#fff;padding:100px 24px}
 .values-c{max-width:1200px;margin:0 auto}
@@ -67,19 +80,20 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .values-content p{font-size:18px;color:var(--txtl);margin-bottom:24px}
 .values-list{display:flex;flex-direction:column;gap:16px}
 .value-item{display:flex;align-items:center;gap:16px}
-.value-check{width:28px;height:28px;background:var(--teal);border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-size:14px;flex-shrink:0}
+.value-check{width:28px;height:28px;background:linear-gradient(135deg,var(--teal),#00838f);border-radius:50%;display:flex;align-items:center;justify-content:center;color:#fff;font-size:14px;flex-shrink:0}
 .value-item span{font-size:16px;color:var(--txt);font-weight:500}
-.values-img{background:linear-gradient(135deg,var(--pri),#1e3a5f);border-radius:24px;padding:48px;color:#fff;min-height:400px;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center}
+.values-img{background:linear-gradient(135deg,var(--magenta),var(--purple));border-radius:24px;padding:48px;color:#fff;min-height:400px;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center}
 .values-img h3{font-size:28px;font-weight:800;margin-bottom:16px}
-.values-img p{font-size:16px;opacity:.8;max-width:280px}
+.values-img p{font-size:16px;opacity:.9;max-width:280px}
 
-.cta{padding:100px 24px;background:linear-gradient(135deg,var(--teal),#0f766e);text-align:center;color:#fff}
+.cta{padding:100px 24px;background:linear-gradient(135deg,var(--teal),#00838f);text-align:center;color:#fff}
 .cta h2{font-size:40px;font-weight:800;margin-bottom:16px}
 .cta p{font-size:18px;opacity:.9;margin-bottom:32px}
-.btn-w{background:#fff;color:var(--pri);padding:14px 28px}
+.btn-w{background:#fff;color:var(--pri);padding:14px 28px;font-weight:700}
 .btn-w:hover{background:var(--bgs)}
 
-footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;color:var(--txtl);border-top:1px solid var(--bor)}
+footer{padding:60px 24px;background:var(--pri);text-align:center}
+.foot-c{font-size:13px;color:rgba(255,255,255,.5)}
 
 @media(max-width:900px){
 .nav-links{display:none}
@@ -93,7 +107,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <body>
 <nav>
 <div class="nav-c">
-<a href="index.html" class="logo"><div class="logo-i">M</div>Mundial Media</a>
+<a href="index.html" class="logo"><div class="logo-icon"><span>m</span></div>Mundial Media</a>
 <div class="nav-links">
 <a href="technology.html">Technology</a>
 <a href="solutions.html">Solutions</a>
@@ -295,7 +309,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </section>
 
 <footer>
-<p>© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p>
+<p class="foot-c">© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p>
 </footer>
 </body>
 </html>
