--- a/demo.html
+++ b/demo.html
@@ -7,83 +7,97 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-:root{--pri:#0f172a;--acc:#0ea5e9;--teal:#14b8a6;--ora:#f97316;--txt:#334155;--txtl:#64748b;--bg:#fff;--bgs:#f8fafc;--bor:#e2e8f0}
+:root{
+  --teal:#0097a7;
+  --magenta:#d81b60;
+  --purple:#8e24aa;
+  --orange:#f57c00;
+  --yellow:#ffc107;
+  --pri:#1a1a2e;
+  --txt:#334155;
+  --txtl:#64748b;
+  --bg:#fff;
+  --bgs:#f8fafc;
+  --bor:#e2e8f0
+}
 body{font-family:'Inter',sans-serif;color:var(--txt);line-height:1.6;background:var(--bgs)}
 a{text-decoration:none;color:inherit}
-nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-filter:blur(10px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
+nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.97);backdrop-filter:blur(12px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
 .nav-c{max-width:1200px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;height:72px}
 .logo{display:flex;align-items:center;gap:12px;font-weight:700;font-size:20px;color:var(--pri)}
-.logo-i{width:36px;height:36px;background:linear-gradient(135deg,var(--ora),var(--acc),var(--teal));border-radius:8px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800}
+.logo-icon{width:40px;height:40px;border-radius:10px;position:relative;overflow:hidden;display:flex;align-items:center;justify-content:center}
+.logo-icon::before{content:'';position:absolute;inset:0;background:conic-gradient(from 180deg,var(--teal) 0deg,var(--magenta) 90deg,var(--purple) 180deg,var(--orange) 270deg,var(--yellow) 360deg)}
+.logo-icon span{position:relative;z-index:1;color:#fff;font-weight:800;font-size:22px}
 .nav-links{display:flex;gap:32px}
 .nav-links a{font-size:14px;font-weight:500;color:var(--txt);transition:color .2s}
-.nav-links a:hover,.nav-links a.active{color:var(--acc)}
+.nav-links a:hover,.nav-links a.active{color:var(--magenta)}
 .btn{padding:10px 20px;border-radius:8px;font-size:14px;font-weight:600;border:none;cursor:pointer;transition:all .2s}
-.btn-p{background:var(--pri);color:#fff}
-.btn-p:hover{background:#1e293b}
+.btn-p{background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff}
+.btn-p:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(216,27,96,.3)}
 .container{max-width:1200px;margin:0 auto;padding:0 24px}
 .demo-header{text-align:center;padding:120px 0 40px}
 .demo-header h1{font-size:40px;font-weight:800;color:var(--pri);margin-bottom:12px}
-.demo-header h1 span{background:linear-gradient(135deg,var(--acc),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.demo-header h1 span{background:linear-gradient(135deg,var(--magenta),var(--purple),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
 .demo-header p{color:var(--txtl);font-size:18px}
 .demo-stage{background:#fff;border-radius:24px;padding:40px;min-height:500px;position:relative;overflow:hidden;box-shadow:0 25px 50px -12px rgba(0,0,0,.1);border:1px solid var(--bor);margin-bottom:60px}
 .step{display:none;animation:fadeIn .5s ease}
 .step.active{display:block}
 @keyframes fadeIn{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 .content-box{background:var(--bgs);border-radius:16px;padding:24px;border:1px solid var(--bor);margin-bottom:24px}
-.content-label{font-size:12px;font-weight:600;color:var(--acc);text-transform:uppercase;margin-bottom:12px}
+.content-label{font-size:12px;font-weight:600;color:var(--magenta);text-transform:uppercase;margin-bottom:12px}
 .article-preview{display:flex;gap:20px}
-.article-img{width:120px;height:80px;background:linear-gradient(135deg,#fde68a,#fbbf24);border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:32px}
+.article-img{width:120px;height:80px;background:linear-gradient(135deg,var(--yellow),var(--orange));border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:32px}
 .article-text h3{font-size:16px;font-weight:700;color:var(--pri);margin-bottom:8px}
 .article-text p{font-size:14px;color:var(--txtl);line-height:1.5}
-.scan-line{height:4px;background:linear-gradient(90deg,transparent,var(--acc),transparent);position:absolute;left:0;right:0;animation:scan 2s ease-in-out infinite}
+.scan-line{height:4px;background:linear-gradient(90deg,transparent,var(--magenta),transparent);position:absolute;left:0;right:0;animation:scan 2s ease-in-out infinite}
 @keyframes scan{0%{top:100px;opacity:0}50%{opacity:1}100%{top:250px;opacity:0}}
 .ai-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-bottom:24px}
 .ai-card{background:var(--bgs);border-radius:12px;padding:20px;text-align:center;border:1px solid var(--bor);transition:all .3s}
-.ai-card.processing{border-color:var(--acc);box-shadow:0 0 20px rgba(14,165,233,.15)}
-.ai-card.done{border-color:var(--teal);background:rgba(20,184,166,.05)}
+.ai-card.processing{border-color:var(--magenta);box-shadow:0 0 20px rgba(216,27,96,.15)}
+.ai-card.done{border-color:var(--teal);background:rgba(0,151,167,.05)}
 .ai-icon{font-size:28px;margin-bottom:12px}
 .ai-card h4{font-size:14px;font-weight:600;color:var(--pri);margin-bottom:4px}
 .ai-card p{font-size:12px;color:var(--txtl)}
 .ai-status{margin-top:8px;font-size:11px;font-weight:600;padding:4px 8px;border-radius:100px;display:inline-block}
-.ai-status.processing{background:rgba(14,165,233,.1);color:var(--acc)}
-.ai-status.done{background:rgba(20,184,166,.1);color:var(--teal)}
+.ai-status.processing{background:rgba(216,27,96,.1);color:var(--magenta)}
+.ai-status.done{background:rgba(0,151,167,.1);color:var(--teal)}
 .match-result{display:flex;gap:24px;align-items:center}
 .match-content{flex:1;background:var(--bgs);border-radius:12px;padding:20px;border:1px solid var(--bor)}
-.match-arrow{font-size:32px;color:var(--acc);animation:pulse 1s infinite}
+.match-arrow{font-size:32px;color:var(--magenta);animation:pulse 1s infinite}
 @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.2)}}
-.match-ad{flex:1;background:linear-gradient(135deg,rgba(14,165,233,.05),rgba(20,184,166,.05));border-radius:12px;padding:20px;border:2px solid var(--acc)}
+.match-ad{flex:1;background:linear-gradient(135deg,rgba(216,27,96,.05),rgba(142,36,170,.05));border-radius:12px;padding:20px;border:2px solid var(--magenta)}
 .match-score{display:flex;align-items:center;gap:8px;margin-top:12px}
 .score-bar{flex:1;height:8px;background:var(--bor);border-radius:4px;overflow:hidden}
-.score-fill{height:100%;background:linear-gradient(90deg,var(--acc),var(--teal));border-radius:4px;width:0;transition:width 1s ease}
+.score-fill{height:100%;background:linear-gradient(90deg,var(--magenta),var(--teal));border-radius:4px;width:0;transition:width 1s ease}
 .score-num{font-size:14px;font-weight:700;color:var(--teal)}
 .results-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:16px;margin-bottom:24px}
 .result-card{background:var(--bgs);border-radius:12px;padding:20px;text-align:center;border:1px solid var(--bor)}
-.result-num{font-size:32px;font-weight:800;color:var(--acc);margin-bottom:4px}
+.result-num{font-size:32px;font-weight:800;background:linear-gradient(135deg,var(--magenta),var(--purple));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin-bottom:4px}
 .result-label{font-size:12px;color:var(--txtl)}
 .result-change{font-size:11px;color:var(--teal);font-weight:600}
 .final-ad{background:#fff;border-radius:16px;box-shadow:0 10px 40px rgba(0,0,0,.08);padding:24px;display:flex;gap:20px;align-items:center;border:1px solid var(--bor)}
-.final-ad-img{width:200px;height:120px;background:linear-gradient(135deg,#fde68a,#fbbf24);border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:48px}
+.final-ad-img{width:200px;height:120px;background:linear-gradient(135deg,var(--yellow),var(--orange));border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:48px}
 .final-ad-content h4{font-size:18px;font-weight:700;color:var(--pri);margin-bottom:8px}
 .final-ad-content p{font-size:14px;color:var(--txtl);margin-bottom:12px}
-.ad-badge{display:inline-block;padding:4px 10px;background:rgba(20,184,166,.1);color:var(--teal);font-size:11px;font-weight:600;border-radius:100px}
+.ad-badge{display:inline-block;padding:4px 10px;background:rgba(0,151,167,.1);color:var(--teal);font-size:11px;font-weight:600;border-radius:100px}
 .step-title{font-size:24px;font-weight:800;color:var(--pri);margin-bottom:8px}
 .step-desc{font-size:14px;color:var(--txtl);margin-bottom:24px}
 .step-indicator{display:flex;justify-content:center;gap:8px;margin-bottom:24px}
 .dot{width:10px;height:10px;background:var(--bor);border-radius:50%;transition:all .3s}
-.dot.active{background:var(--acc);transform:scale(1.2)}
+.dot.active{background:var(--magenta);transform:scale(1.2)}
 .dot.done{background:var(--teal)}
 .nav-btns{display:flex;justify-content:center;gap:12px;margin-top:24px}
-.btn-pri{background:var(--pri);color:#fff;padding:12px 24px;border-radius:8px;font-size:14px;font-weight:600;border:none;cursor:pointer}
-.btn-pri:hover{background:#1e293b}
+.btn-pri{background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff;padding:12px 24px;border-radius:8px;font-size:14px;font-weight:600;border:none;cursor:pointer}
+.btn-pri:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(216,27,96,.3)}
 .btn-sec{background:var(--bgs);color:var(--txt);padding:12px 24px;border-radius:8px;font-size:14px;font-weight:600;border:1px solid var(--bor);cursor:pointer}
 .btn-sec:hover{background:#fff}
 .btn-sec:disabled,.btn-pri:disabled{opacity:.5;cursor:not-allowed}
 .tags{display:flex;gap:12px;flex-wrap:wrap}
 .tag{padding:6px 12px;border-radius:100px;font-size:12px;font-weight:500}
-.tag-blue{background:rgba(14,165,233,.1);color:var(--acc)}
-.tag-orange{background:rgba(249,115,22,.1);color:var(--ora)}
-.tag-teal{background:rgba(20,184,166,.1);color:var(--teal)}
-.tag-purple{background:rgba(139,92,246,.1);color:#8b5cf6}
+.tag-magenta{background:rgba(216,27,96,.1);color:var(--magenta)}
+.tag-orange{background:rgba(245,124,0,.1);color:var(--orange)}
+.tag-teal{background:rgba(0,151,167,.1);color:var(--teal)}
+.tag-purple{background:rgba(142,36,170,.1);color:var(--purple)}
 .output-box{background:var(--bgs);border-radius:12px;padding:16px;border:1px solid var(--bor)}
 .output-label{font-size:12px;color:var(--txtl);margin-bottom:8px}
 .output-text{font-family:monospace;font-size:12px;color:var(--pri);line-height:1.8}
@@ -92,14 +106,15 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .mini-metric-icon{font-size:24px;margin-bottom:4px}
 .mini-metric-val{font-size:20px;font-weight:700;color:var(--pri)}
 .mini-metric-label{font-size:11px;color:var(--txtl)}
-footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;color:var(--txtl);border-top:1px solid var(--bor)}
+footer{padding:60px 24px;background:var(--pri);text-align:center}
+.foot-c{font-size:13px;color:rgba(255,255,255,.5)}
 @media(max-width:900px){.nav-links{display:none}.ai-grid,.results-grid,.metric-row{grid-template-columns:1fr}.match-result{flex-direction:column}.final-ad{flex-direction:column}}
 </style>
 </head>
 <body>
 <nav>
 <div class="nav-c">
-<a href="index.html" class="logo"><div class="logo-i">M</div>Mundial Media</a>
+<a href="index.html" class="logo"><div class="logo-icon"><span>m</span></div>Mundial Media</a>
 <div class="nav-links">
 <a href="technology.html">Technology</a>
 <a href="solutions.html">Solutions</a>
@@ -136,7 +151,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <div class="scan-line"></div>
 </div>
 <div class="tags">
-<span class="tag tag-blue">Hispanic Culture</span>
+<span class="tag tag-magenta">Hispanic Culture</span>
 <span class="tag tag-orange">Family</span>
 <span class="tag tag-teal">Celebration</span>
 <span class="tag tag-purple">Food & Recipes</span>
@@ -165,7 +180,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <p class="step-desc">Ads are matched to content based on contextual relevance, not cookies</p>
 <div class="match-result">
 <div class="match-content">
-<div style="font-size:12px;color:var(--acc);font-weight:600;margin-bottom:8px">CONTENT SIGNALS</div>
+<div style="font-size:12px;color:var(--magenta);font-weight:600;margin-bottom:8px">CONTENT SIGNALS</div>
 <div style="font-size:14px;color:var(--pri);font-weight:500">Hispanic Heritage + Family + Celebration + Food</div>
 </div>
 <div class="match-arrow">→</div>
@@ -205,7 +220,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </div>
 </div>
 </div>
-<footer><p>© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p></footer>
+<footer><p class="foot-c">© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p></footer>
 <script>
 let currentStep=1;const totalSteps=4,prevBtn=document.getElementById('prevBtn'),nextBtn=document.getElementById('nextBtn'),dots=document.querySelectorAll('.dot');
 function updateStep(){document.querySelectorAll('.step').forEach(s=>s.classList.remove('active'));document.getElementById('step'+currentStep).classList.add('active');dots.forEach((dot,i)=>{dot.classList.remove('active','done');if(i+1===currentStep)dot.classList.add('active');if(i+1<currentStep)dot.classList.add('done')});prevBtn.disabled=currentStep===1;nextBtn.textContent=currentStep===totalSteps?'Restart Demo':'Next Step →';if(currentStep===2)runAIAnimation();if(currentStep===3)runMatchAnimation()}
