--- a/technology.html
+++ b/technology.html
@@ -7,41 +7,55 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-:root{--pri:#0f172a;--acc:#0ea5e9;--teal:#14b8a6;--ora:#f97316;--pur:#8b5cf6;--txt:#334155;--txtl:#64748b;--bg:#fff;--bgs:#f8fafc;--bor:#e2e8f0}
+:root{
+  --teal:#0097a7;
+  --magenta:#d81b60;
+  --purple:#8e24aa;
+  --orange:#f57c00;
+  --yellow:#ffc107;
+  --pri:#1a1a2e;
+  --txt:#334155;
+  --txtl:#64748b;
+  --bg:#fff;
+  --bgs:#f8fafc;
+  --bor:#e2e8f0
+}
 body{font-family:'Inter',sans-serif;color:var(--txt);line-height:1.6}
 a{text-decoration:none;color:inherit}
-nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-filter:blur(10px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
+nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.97);backdrop-filter:blur(12px);border-bottom:1px solid var(--bor);z-index:99;padding:0 24px}
 .nav-c{max-width:1200px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;height:72px}
 .logo{display:flex;align-items:center;gap:12px;font-weight:700;font-size:20px;color:var(--pri)}
-.logo-i{width:36px;height:36px;background:linear-gradient(135deg,var(--ora),var(--acc),var(--teal));border-radius:8px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800}
+.logo-icon{width:40px;height:40px;border-radius:10px;position:relative;overflow:hidden;display:flex;align-items:center;justify-content:center}
+.logo-icon::before{content:'';position:absolute;inset:0;background:conic-gradient(from 180deg,var(--teal) 0deg,var(--magenta) 90deg,var(--purple) 180deg,var(--orange) 270deg,var(--yellow) 360deg)}
+.logo-icon span{position:relative;z-index:1;color:#fff;font-weight:800;font-size:22px}
 .nav-links{display:flex;gap:32px}
 .nav-links a{font-size:14px;font-weight:500;color:var(--txt);transition:color .2s}
-.nav-links a:hover,.nav-links a.active{color:var(--acc)}
+.nav-links a:hover,.nav-links a.active{color:var(--magenta)}
 .btn{padding:10px 20px;border-radius:8px;font-size:14px;font-weight:600;border:none;cursor:pointer;transition:all .2s}
-.btn-p{background:var(--pri);color:#fff}
-.btn-p:hover{background:#1e293b}
+.btn-p{background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff}
+.btn-p:hover{transform:translateY(-2px);box-shadow:0 8px 20px rgba(216,27,96,.3)}
 
-.hero{padding:140px 24px 80px;background:linear-gradient(180deg,var(--bgs),var(--bg))}
+.hero{padding:140px 24px 80px;background:linear-gradient(180deg,#fafbfc,var(--bg))}
 .hero-c{max-width:1200px;margin:0 auto;text-align:center}
 .hero h1{font-size:52px;font-weight:800;color:var(--pri);margin-bottom:20px}
-.hero h1 span{background:linear-gradient(135deg,var(--acc),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.hero h1 span{background:linear-gradient(135deg,var(--magenta),var(--purple),var(--teal));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
 .hero p{font-size:20px;color:var(--txtl);max-width:700px;margin:0 auto 40px}
 
 .section{padding:80px 24px}
 .section-c{max-width:1200px;margin:0 auto}
 .section-h{text-align:center;margin-bottom:60px}
-.section-t{font-size:13px;font-weight:600;color:var(--acc);text-transform:uppercase;letter-spacing:.05em;margin-bottom:12px}
+.section-t{font-size:13px;font-weight:600;color:var(--magenta);text-transform:uppercase;letter-spacing:.1em;margin-bottom:12px}
 .section-ti{font-size:36px;font-weight:800;color:var(--pri);margin-bottom:16px}
 .section-d{font-size:18px;color:var(--txtl);max-width:600px;margin:0 auto}
 
 .engine{background:var(--bgs)}
 .engine-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:32px}
 .engine-card{background:#fff;padding:40px;border-radius:20px;border:1px solid var(--bor);transition:all .3s;text-align:center}
-.engine-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(0,0,0,.1);border-color:var(--acc)}
+.engine-card:hover{transform:translateY(-8px);box-shadow:0 20px 40px rgba(0,0,0,.1);border-color:var(--magenta)}
 .engine-icon{width:80px;height:80px;margin:0 auto 24px;border-radius:20px;display:flex;align-items:center;justify-content:center;font-size:36px}
-.engine-icon-blue{background:linear-gradient(135deg,rgba(14,165,233,.15),rgba(20,184,166,.15))}
-.engine-icon-ora{background:linear-gradient(135deg,rgba(249,115,22,.15),rgba(234,88,12,.15))}
-.engine-icon-pur{background:linear-gradient(135deg,rgba(139,92,246,.15),rgba(168,85,247,.15))}
+.engine-icon-teal{background:linear-gradient(135deg,rgba(0,151,167,.15),rgba(0,151,167,.25))}
+.engine-icon-magenta{background:linear-gradient(135deg,rgba(216,27,96,.15),rgba(216,27,96,.25))}
+.engine-icon-purple{background:linear-gradient(135deg,rgba(142,36,170,.15),rgba(142,36,170,.25))}
 .engine-card h3{font-size:22px;font-weight:700;color:var(--pri);margin-bottom:12px}
 .engine-card p{font-size:15px;color:var(--txtl);line-height:1.7}
 
@@ -51,14 +65,14 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .how-content>p{font-size:18px;color:var(--txtl);margin-bottom:32px}
 .how-steps{display:flex;flex-direction:column;gap:20px}
 .how-step{display:flex;gap:20px;padding:20px;background:var(--bgs);border-radius:12px;border:1px solid var(--bor);transition:border-color .2s}
-.how-step:hover{border-color:var(--acc)}
-.how-num{width:40px;height:40px;background:var(--acc);color:#fff;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:700;flex-shrink:0}
+.how-step:hover{border-color:var(--magenta)}
+.how-num{width:40px;height:40px;background:linear-gradient(135deg,var(--magenta),var(--purple));color:#fff;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:700;flex-shrink:0}
 .how-step h4{font-size:16px;font-weight:600;color:var(--pri);margin-bottom:4px}
 .how-step p{font-size:14px;color:var(--txtl)}
-.how-visual{background:linear-gradient(135deg,var(--pri),#1e3a5f);border-radius:24px;padding:48px;color:#fff;display:flex;flex-direction:column;justify-content:center}
+.how-visual{background:linear-gradient(135deg,var(--pri),#2d2d5a);border-radius:24px;padding:48px;color:#fff;display:flex;flex-direction:column;justify-content:center}
 .how-visual h3{font-size:18px;font-weight:600;margin-bottom:32px;opacity:.8}
 .flow-item{display:flex;align-items:center;gap:16px;padding:16px;background:rgba(255,255,255,.1);border-radius:12px;margin-bottom:12px}
-.flow-icon{width:44px;height:44px;background:var(--acc);border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:20px}
+.flow-icon{width:44px;height:44px;background:linear-gradient(135deg,var(--magenta),var(--purple));border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:20px}
 .flow-item span{font-size:15px;font-weight:500}
 
 .features{background:var(--bgs)}
@@ -66,15 +80,16 @@ nav{position:fixed;top:0;width:100%;background:rgba(255,255,255,.95);backdrop-fi
 .feat-card{background:#fff;padding:28px;border-radius:16px;border:1px solid var(--bor);text-align:center}
 .feat-card h4{font-size:16px;font-weight:700;color:var(--pri);margin-bottom:8px}
 .feat-card p{font-size:14px;color:var(--txtl)}
-.feat-num{font-size:36px;font-weight:800;color:var(--acc);margin-bottom:8px}
+.feat-num{font-size:36px;font-weight:800;background:linear-gradient(135deg,var(--magenta),var(--purple));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin-bottom:8px}
 
-.cta{padding:100px 24px;background:linear-gradient(135deg,var(--pri),#1e3a5f);text-align:center;color:#fff}
+.cta{padding:100px 24px;background:linear-gradient(135deg,var(--magenta),var(--purple));text-align:center;color:#fff}
 .cta h2{font-size:40px;font-weight:800;margin-bottom:16px}
-.cta p{font-size:18px;opacity:.8;margin-bottom:32px}
-.btn-w{background:#fff;color:var(--pri);padding:14px 28px}
+.cta p{font-size:18px;opacity:.9;margin-bottom:32px}
+.btn-w{background:#fff;color:var(--pri);padding:14px 28px;font-weight:700}
 .btn-w:hover{background:var(--bgs)}
 
-footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;color:var(--txtl);border-top:1px solid var(--bor)}
+footer{padding:60px 24px;background:var(--pri);text-align:center}
+.foot-c{font-size:13px;color:rgba(255,255,255,.5)}
 
 @media(max-width:900px){
 .nav-links{display:none}
@@ -87,7 +102,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 <body>
 <nav>
 <div class="nav-c">
-<a href="index.html" class="logo"><div class="logo-i">M</div>Mundial Media</a>
+<a href="index.html" class="logo"><div class="logo-icon"><span>m</span></div>Mundial Media</a>
 <div class="nav-links">
 <a href="technology.html" class="active">Technology</a>
 <a href="solutions.html">Solutions</a>
@@ -114,17 +129,17 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </div>
 <div class="engine-grid">
 <div class="engine-card">
-<div class="engine-icon engine-icon-blue">🧠</div>
+<div class="engine-icon engine-icon-teal">🧠</div>
 <h3>Natural Language Processing</h3>
 <p>Advanced NLP models analyze textual content to identify contextually relevant segments, sentiment, and cultural nuances across 15+ languages.</p>
 </div>
 <div class="engine-card">
-<div class="engine-icon engine-icon-ora">👁️</div>
+<div class="engine-icon engine-icon-magenta">👁️</div>
 <h3>Computer Vision</h3>
 <p>Our CV technology identifies brand logos, objects, and visual context within images and video to build rich metadata that augments text analysis.</p>
 </div>
 <div class="engine-card">
-<div class="engine-icon engine-icon-pur">⚡</div>
+<div class="engine-icon engine-icon-purple">⚡</div>
 <h3>Machine Learning</h3>
 <p>Continuous learning algorithms optimize campaign performance in real-time, predicting outcomes and adjusting delivery for maximum impact.</p>
 </div>
@@ -218,7 +233,7 @@ footer{padding:40px 24px;background:var(--bgs);text-align:center;font-size:13px;
 </section>
 
 <footer>
-<p>© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p>
+<p class="foot-c">© 2026 Mundial Media. All rights reserved. | NMSDC Certified MBE</p>
 </footer>
 </body>
 </html>
